# rpcc

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
crates/rpcc-core/: Cargo.toml
crates/rpcc-core/src/: main.rs
docs/superpowers/plans/: 2026-05-27-vitest-coverage-provider.md
tests/harness/: run.js
